--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@
   font-family: "Ubuntu", sans-serif;
 }
 body{
-  background: linear-gradient(180deg, #594cee 0%, #8dd0f5 100%);
+  background-image: url(/img/bg-weather.jpg);
   display: flex;
   justify-content: center;
   align-items: center;
